nginx ingress controller/ingress resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-2048
  namespace: game-2048
spec:
  ingressClassName: nginx
  rules:
  - host: game.samehpalas.live
    http:
      paths:
      - backend:
          service:
            name: service-2048
            port:
              number: 80
        path: /
        pathType: Prefix
